// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomePage2 matches the snapshot desktop 1`] = `
<div>
  <div
    class="SingleImageBgstyles__DivImageContainer-sc-1t8mtyj-0 knqRSY"
  >
    <img
      alt="landscape"
      class="SingleImageBgstyles__Image-sc-1t8mtyj-1 fgZjyF"
      src="[object Object]"
    />
    <div
      class="ant-flex css-dev-only-do-not-override-zg0ahe ant-flex-align-center ant-flex-justify-center"
      style="height: 100vh;"
    >
      <div
        class="ant-layout css-dev-only-do-not-override-zg0ahe"
        style="width: 100%; max-width: 300px; padding: 20px 15px;"
      >
        <h1
          class="ant-typography css-dev-only-do-not-override-zg0ahe"
          style="text-align: center;"
        >
          Welcome
        </h1>
        <input
          class="ant-input css-dev-only-do-not-override-zg0ahe ant-input-outlined"
          placeholder="email"
          style="margin-bottom: 20px;"
          type="text"
          value=""
        />
        <button
          class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-default ant-btn-block"
          style="margin-bottom: 20px;"
          type="button"
        >
          <span>
            Log in
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-default ant-btn-block"
          style="margin-bottom: 20px;"
          type="button"
        >
          <span>
            create account
          </span>
        </button>
        <div
          class="ant-flex css-dev-only-do-not-override-zg0ahe ant-flex-wrap-wrap ant-flex-justify-center ant-flex-gap-large"
          style="margin-bottom: 20px;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="google"
                class="anticon anticon-google"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="google"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WelcomePage2 matches the snapshot laptop 1`] = `
<div>
  <div
    class="SingleImageBgstyles__DivImageContainer-sc-1t8mtyj-0 knqRSY"
  >
    <img
      alt="landscape"
      class="SingleImageBgstyles__Image-sc-1t8mtyj-1 fgZjyF"
      src="[object Object]"
    />
    <div
      class="ant-flex css-dev-only-do-not-override-zg0ahe ant-flex-align-center ant-flex-justify-center"
      style="height: 100vh;"
    >
      <div
        class="ant-layout css-dev-only-do-not-override-zg0ahe"
        style="width: 100%; max-width: 300px; padding: 20px 15px;"
      >
        <h1
          class="ant-typography css-dev-only-do-not-override-zg0ahe"
          style="text-align: center;"
        >
          Welcome
        </h1>
        <input
          class="ant-input css-dev-only-do-not-override-zg0ahe ant-input-outlined"
          placeholder="email"
          style="margin-bottom: 20px;"
          type="text"
          value=""
        />
        <button
          class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-default ant-btn-block"
          style="margin-bottom: 20px;"
          type="button"
        >
          <span>
            Log in
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-default ant-btn-block"
          style="margin-bottom: 20px;"
          type="button"
        >
          <span>
            create account
          </span>
        </button>
        <div
          class="ant-flex css-dev-only-do-not-override-zg0ahe ant-flex-wrap-wrap ant-flex-justify-center ant-flex-gap-large"
          style="margin-bottom: 20px;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="google"
                class="anticon anticon-google"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="google"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WelcomePage2 matches the snapshot mobile 1`] = `
<div>
  <div
    class="SingleImageBgstyles__DivImageContainer-sc-1t8mtyj-0 knqRSY"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-zg0ahe ant-flex-align-center ant-flex-justify-center"
      style="height: 100vh;"
    >
      <div
        class="ant-layout css-dev-only-do-not-override-zg0ahe"
        style="width: 100%; max-width: 300px; padding: 20px 15px;"
      >
        <h1
          class="ant-typography css-dev-only-do-not-override-zg0ahe"
          style="text-align: center;"
        >
          Welcome
        </h1>
        <input
          class="ant-input css-dev-only-do-not-override-zg0ahe ant-input-outlined"
          placeholder="email"
          style="margin-bottom: 20px;"
          type="text"
          value=""
        />
        <button
          class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-default ant-btn-block"
          style="margin-bottom: 20px;"
          type="button"
        >
          <span>
            Log in
          </span>
        </button>
        <button
          class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-default ant-btn-block"
          style="margin-bottom: 20px;"
          type="button"
        >
          <span>
            create account
          </span>
        </button>
        <div
          class="ant-flex css-dev-only-do-not-override-zg0ahe ant-flex-wrap-wrap ant-flex-justify-center ant-flex-gap-large"
          style="margin-bottom: 20px;"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="google"
                class="anticon anticon-google"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="google"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="google"
                class="anticon anticon-google"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="google"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="google"
                class="anticon anticon-google"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="google"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="google"
                class="anticon anticon-google"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="google"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary ant-btn-icon-only"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="google"
                class="anticon anticon-google"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="google"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-zg0ahe ant-btn-circle ant-btn-primary"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
